--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^15.13.1",
+    "@contentful/rich-text-react-renderer": "^15.12.1",
     "@vercel/analytics": "^0.1.1",
     "contentful": "^9.2.5",
     "daisyui": "^2.31.0",
